{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 771,
  "lineage": "d344aedc-ac09-b6b6-cd25-e278d187665d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-c78d64c6",
            "association_id": "eipassoc-00df2cdf2deaadec7",
            "domain": "vpc",
            "id": "eipalloc-c78d64c6",
            "instance": "i-0b647d6e7ca429031",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-04ec2860a34820238",
            "private_dns": "ip-10-0-0-11.eu-central-1.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-126-239-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.239.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_instance.instance",
            "aws_network_interface.network_interface",
            "aws_security_group.instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd2715a1ae2acd18",
            "arn": "arn:aws:ec2:eu-central-1:496124100072:instance/i-0b647d6e7ca429031",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda2",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Application": "deervision"
                },
                "throughput": 0,
                "volume_id": "vol-01a4a98778cfd0c1f",
                "volume_size": 4,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "deervisionInstanceProfile",
            "id": "i-0b647d6e7ca429031",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2a05:d014:1d77:c700::10"
            ],
            "key_name": "deervision",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04ec2860a34820238"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ec2860a34820238",
            "private_dns": "ip-10-0-0-11.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-126-239-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.239.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094d8cf99ecea11e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c8ad57af2ef6100f",
            "tags": {
              "Application": "deervision",
              "Name": "deervisionInstance"
            },
            "tags_all": {
              "Application": "deervision",
              "Name": "deervisionInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0698162f7c3484fce"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_network_interface.network_interface",
            "aws_security_group.instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:internet-gateway/igw-0b0669cddd4f51a2f",
            "id": "igw-0b0669cddd4f51a2f",
            "owner_id": "496124100072",
            "tags": {
              "Application": "deervision",
              "Name": "deervisionIGW"
            },
            "tags_all": {
              "Application": "deervision",
              "Name": "deervisionIGW"
            },
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:network-acl/acl-0eddefa39dfb89bc3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 111,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 121,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 130,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 80
              }
            ],
            "id": "acl-0eddefa39dfb89bc3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 131,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 121,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 111,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 140,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "496124100072",
            "subnet_ids": [
              "subnet-0c8ad57af2ef6100f",
              "subnet-0c96c82e9ab3ab6be",
              "subnet-0ff9765b26b378ccf"
            ],
            "tags": {
              "Application": "deervision",
              "Name": "deervisionNetworkACL"
            },
            "tags_all": {
              "Application": "deervision",
              "Name": "deervisionNetworkACL"
            },
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:network-interface/eni-04ec2860a34820238",
            "attachment": [
              {
                "attachment_id": "eni-attach-0944a96189d9f2a78",
                "device_index": 0,
                "instance": "i-0b647d6e7ca429031"
              }
            ],
            "id": "eni-04ec2860a34820238",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 1,
            "ipv6_address_list": [
              "2a05:d014:1d77:c700::10"
            ],
            "ipv6_address_list_enabled": false,
            "ipv6_addresses": [
              "2a05:d014:1d77:c700::10"
            ],
            "ipv6_prefix_count": 0,
            "mac_address": "02:bf:2d:a3:45:5f",
            "owner_id": "496124100072",
            "private_dns_name": "ip-10-0-0-11.eu-central-1.compute.internal",
            "private_ip": "10.0.0.11",
            "private_ip_list": [
              "10.0.0.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0698162f7c3484fce"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c8ad57af2ef6100f"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:route-table/rtb-0aa6714c32719f46b",
            "id": "rtb-0aa6714c32719f46b",
            "owner_id": "496124100072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0669cddd4f51a2f",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0669cddd4f51a2f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "deervision",
              "Name": "deervisionRoute"
            },
            "tags_all": {
              "Application": "deervision",
              "Name": "deervisionRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a3ded528f47cdb1",
            "route_table_id": "rtb-0aa6714c32719f46b",
            "subnet_id": "subnet-0c8ad57af2ef6100f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8fc66c7cb176c06",
            "route_table_id": "rtb-0aa6714c32719f46b",
            "subnet_id": "subnet-0ff9765b26b378ccf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6e7a5ffc08d39f9",
            "route_table_id": "rtb-0aa6714c32719f46b",
            "subnet_id": "subnet-0c96c82e9ab3ab6be"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:security-group/sg-0698162f7c3484fce",
            "description": "Deer Vision Instance Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connection from EC2 to Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0698162f7c3484fce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ping IPv4",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS requests from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "deervisionInstanceSG",
            "name_prefix": "",
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "deervision",
              "Name": "deervisionInstanceSG"
            },
            "tags_all": {
              "Application": "deervision",
              "Name": "deervisionInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0c8ad57af2ef6100f",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ad57af2ef6100f",
            "ipv6_cidr_block": "2a05:d014:1d77:c700::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05eeb175be80b30a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "deervision"
            },
            "tags_all": {
              "Application": "deervision"
            },
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0ff9765b26b378ccf",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff9765b26b378ccf",
            "ipv6_cidr_block": "2a05:d014:1d77:c701::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-03ac5bc2f8fbc81b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "deervision"
            },
            "tags_all": {
              "Application": "deervision"
            },
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0c96c82e9ab3ab6be",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c96c82e9ab3ab6be",
            "ipv6_cidr_block": "2a05:d014:1d77:c702::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b6aadb99efc69061",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "deervision"
            },
            "tags_all": {
              "Application": "deervision"
            },
            "vpc_id": "vpc-09f704b6ef8b68c5e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:vpc/vpc-09f704b6ef8b68c5e",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0169c3c3cd2a28eab",
            "default_route_table_id": "rtb-0b0b5d9b65bae72a2",
            "default_security_group_id": "sg-05d9d609c086f8a80",
            "dhcp_options_id": "dopt-79c48912",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f704b6ef8b68c5e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-02487c4ae9b351249",
            "ipv6_cidr_block": "2a05:d014:1d77:c700::/56",
            "ipv6_cidr_block_network_border_group": "eu-central-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0b5d9b65bae72a2",
            "owner_id": "496124100072",
            "tags": {
              "Application": "deervision",
              "Name": "deervisionVPC"
            },
            "tags_all": {
              "Application": "deervision",
              "Name": "deervisionVPC"
            }
          }
        }
      ]
    }
  ]
}